2005-06-02  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-subst-default-vals): Substitute
	${localstartupfiledir}, not ${localstartupfile} (which is undefined).

2005-05-16  David Bateman  <dbateman@free.fr>

	* configure.in: Change UMFPACK_LONG_IDX to IDX_TYPE_LONG.

2005-05-04  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CHECK_LIB($zlib_lib, ...)): Check for
	gzclearerr instead of deflate.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_ARG_WITH(umfpack)): List -lumfpack ahead of -lamd.
	From Dmitri A. Sergatskov <dasergatskov@gmail.com>.

2005-04-29  David Bateman  <dbateman@free.fr>

	* configure.in: Add UMFPACK_LONG_IDX

2005-04-21  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_FILES): Remove install-octave from the list.
	(AH_BOTTOM): Define SIZEOF_OCTAVE_IDX_TYPE.

2005-04-14  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Only perform link step if we have some object files.
	If only -v or --version is supplied, print version info and exit.

2005-04-08  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (maintainer-clean distclean):
	Remove install-octave from the list of files to remove.
	(install-octave.in): Delete file.
	(DISTFILES): Remove it from the list.

	* Initial merge of 64-bit changes from Clinton Chee:

	2005-04-07  John W. Eaton  <jwe@octave.org>

	* configure.in (--enable-64): Make default disabled.

	2005-04-06  John W. Eaton  <jwe@octave.org>

	* mk-opts.pl (emit_show_function, emit_set_functions,
	emit_print_function): Also accept "octave_idx_type" and
	"Array<octave_idx_type>".

	2005-04-01  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (USE_64_BIT_IDX_T): Substitute value.
	(do-subst-config-vals): Add to list of substitutions.

	* configure.in (AC_CONFIG_FILES): Perform substitutions on
	liboctave/oct-types.h too.
	Handle --enable-64.

2005-04-06  David Bateman  <dbateman@free.fr>

	* configure.in: Split the HDF5 and zlib detection code, so that zlib 