@@ -1243,7 +1243,7 @@ save_mat5_array_length (const double* val, int nel, bool save_as_floats)
 	    {
 	      double tmp = val [i];
 
-	      if (! (octave_is_NaN_or_NA (tmp) || xisinf (tmp))
+	      if (! (xisnan (tmp) || xisinf (tmp))
 		  && fabs (tmp) > FLT_MAX)
 		{
 		  too_large_for_float = true;
